--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -190,10 +190,12 @@
         <Compile Include="$(AndroidProjectFolder)MainActivity.fs" />
         <Compile Include="$(AndroidProjectFolder)MainApplication.fs" />
 
+        <!--#if (Net7OrEarlier)-->
         <!--#if (CentralPkgMgmt)-->
         <PackageReference Include="FSharp.Android.Resource" />
         <!--#else-->
-        <PackageReference Include="FSharp.Android.Resource" Version="1.0.*" />
+        <PackageReference Include="FSharp.Android.Resource" Version="1.*" />
+        <!--#endif-->
         <!--#endif-->
     </ItemGroup>
 
@@ -224,7 +226,7 @@
         <!--#if (CentralPkgMgmt)-->
         <PackageReference Include="FSharp.Maui.WinUICompat" />
         <!--#else-->
-        <PackageReference Include="FSharp.Maui.WinUICompat" Version="1.1.*" />
+        <PackageReference Include="FSharp.Maui.WinUICompat" Version="1.*" />
         <!--#endif-->
     </ItemGroup>
 
@@ -276,26 +278,26 @@
         <!--#endif-->
         <!--#if (Net7OrLater)-->
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Condition="'$(Configuration)' == 'Debug'" />
-        <!--#if (AddFoldablePackage)-->
+        <!--#if (AddFoldable)-->
         <PackageReference Include="Microsoft.Maui.Controls.Foldable" />
         <!--#endif-->
-        <!--#if (AddMapsPackage)-->
+        <!--#if (AddMaps)-->
         <PackageReference Include="Fabulous.MauiControls.Maps" />
         <!--#if (AllPlatforms || IsWindows)-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" />
         <!--#endif-->
         <!--#endif-->
-        <!--#if (AddMediaPackage)-->
+        <!--#if (AddMedia)-->
         <PackageReference Include="Fabulous.MauiControls.MediaElement" />
         <!--#endif-->
         <!--#endif-->
-        <!--#if (AddToolkitPackage)-->
+        <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" />
         <!--#endif-->
-        <!--#if (AddMarkupPackage)-->
+        <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" />
         <!--#endif-->
-        <!--#if (AddMvvmToolkitPackage)-->
+        <!--#if (AddMvvmToolkit)-->
         <PackageReference Include="CommunityToolkit.Mvvm" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
@@ -315,13 +317,13 @@
         <!--#endif-->
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-        <!--#if (AddFoldablePackage)-->
+        <!--#if (AddFoldable)-->
         <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#endif-->
-        <!--#if (AddToolkitPackage)-->
+        <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
         <!--#endif-->
-        <!--#if (AddMarkupPackage)-->
+        <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
@@ -331,49 +333,49 @@
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="3.*" />
         <!--#endif-->
         <!--#endif-->
-        <!--#if (AddMapsPackage)-->
+        <!--#if (AddMaps)-->
         <PackageReference Include="Fabulous.MauiControls.Maps" Version="2.*" />
         <!--#if (AllPlatforms || IsWindows)-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" Version="1.*" />
         <!--#endif-->
         <!--#endif-->
-        <!--#if (AddMediaPackage)-->
+        <!--#if (AddMedia)-->
         <PackageReference Include="Fabulous.MauiControls.MediaElement" Version="2.*" />
         <!--#endif-->
         <!--#elif (Net7)-->
-        <!--#if (AddFoldablePackage)-->
+        <!--#if (AddFoldable)-->
         <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="7.*" />
         <!--#endif-->
-        <!--#if (AddToolkitPackage)-->
+        <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="6.*" />
         <!--#endif-->
-        <!--#if (AddMarkupPackage)-->
+        <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.*" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="2.*" />
         <!--#endif-->
-        <!--#if (AddMapsPackage)-->
+        <!--#if (AddMaps)-->
         <PackageReference Include="Fabulous.MauiControls.Maps" Version="2.*" />
         <!--#if (AllPlatforms || IsWindows)-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" Version="1.*" />
         <!--#endif-->
         <!--#endif-->
-        <!--#if (AddMediaPackage)-->
+        <!--#if (AddMedia)-->
         <PackageReference Include="Fabulous.MauiControls.MediaElement" Version="2.*" />
         <!--#endif-->
         <!--#else-->
-        <!--#if (AddToolkitPackage)-->
+        <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="2.*" />
         <!--#endif-->
-        <!--#if (AddMarkupPackage)-->
+        <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.*" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="1.*" />
         <!--#endif-->
         <!--#endif-->
-        <!--#if (AddMvvmToolkitPackage)-->
+        <!--#if (AddMvvmToolkit)-->
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.*" />
         <!--#endif-->
         <!--#endif-->
@@ -384,6 +386,12 @@
     <!--#if (AllPlatforms || IsiOS)-->
     <ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">
         <BundleResource Include="Platforms\iOS\PrivacyInfo.xcprivacy" LogicalName="PrivacyInfo.xcprivacy" />
+    </ItemGroup>
+    <!--#endif-->
+
+    <!--#if (AllPlatforms || IsmacOS)-->
+    <ItemGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">
+        <BundleResource Include="Platforms\MacCatalyst\PrivacyInfo.xcprivacy" LogicalName="PrivacyInfo.xcprivacy" />
     </ItemGroup>
     <!--#endif-->
 
