--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
@@ -174,11 +174,20 @@
         <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" />
         <!--#endif-->
+        <!--#if (AddCamera)-->
+        <PackageReference Include="CommunityToolkit.Maui.Camera" />
+        <!--#endif-->
+        <!--#if (AddMedia)-->
+        <PackageReference Include="CommunityToolkit.Maui.MediaElement" />
+        <!--#endif-->
         <!--#if (AddMaps)-->
         <PackageReference Include="Microsoft.Maui.Controls.Maps" />
         <!--#if (AllPlatforms || IsWindows)-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" />
         <!--#endif-->
+        <!--#endif-->
+        <!--#if (AddFoldable)-->
+        <PackageReference Include="Microsoft.Maui.Controls.Foldable" />
         <!--#endif-->
         <!--#if (AddMvvmToolkit)-->
         <PackageReference Include="CommunityToolkit.Mvvm" />
@@ -204,11 +213,20 @@
         <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
         <!--#endif-->
+        <!--#if (AddCamera)-->
+        <PackageReference Include="CommunityToolkit.Maui.Camera" Version="1.*" />
+        <!--#endif-->
+        <!--#if (AddMedia)-->
+        <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="4.*" />
+        <!--#endif-->
         <!--#if (AddMaps)-->
         <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
         <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="2.*" />
         <!--#endif-->
+        <!--#endif-->
+        <!--#if (AddFoldable)-->
+        <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <!--#if (Net9)-->
@@ -225,11 +243,17 @@
         <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.*" />
         <!--#endif-->
+        <!--#if (AddMedia)-->
+        <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="2.*" />
+        <!--#endif-->
         <!--#if (AddMaps)-->
         <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
         <PackageVersion Include="CommunityToolkit.Maui.Maps" Version="1.*" />
         <!--#endif-->
+        <!--#endif-->
+        <!--#if (AddFoldable)-->
+        <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="2.*" />
